# TransityTerminal_ResvCoreEngine

./: .replit  Cargo.toml  README.md  replit.md
.github/workflows/: release-engine.yml
attached_assets/: Pasted--Code-Review-TransityTerminal-Rust-Reservation-Engine-D_1777010948126.txt
crates/engine-core/src/: hold.rs  lib.rs  reaper.rs
crates/engine-server/src/: config.rs  routes.rs  state.rs
crates/engine-server/src/middleware/: idempotency.rs
engine/: .dockerignore  Cargo.toml  Dockerfile  README.md
engine/crates/engine-core/: Cargo.toml
engine/crates/engine-core/src/: cancel.rs  confirm.rs  error.rs  events.rs  hold.rs  lib.rs  reaper.rs  release.rs  snapshot.rs  types.rs
engine/crates/engine-core/tests/: parity.rs
engine/crates/engine-server/: Cargo.toml
engine/crates/engine-server/src/: config.rs  error.rs  main.rs  reaper_task.rs  routes.rs  state.rs
engine/crates/engine-server/src/middleware/: hmac.rs  idempotency.rs  mod.rs
engine/deploy/: .env.engine.example  README.md  docker-compose.engine.yml
engine/docs/: TRANSITY_TERMINAL_INTEGRATION.md  TT_HOLDS_ADAPTER_INSTRUCTIONS.md
engine/loadtest/: Cargo.toml
engine/loadtest/src/: main.rs
engine/migrations/: 0001_init.sql  0002_idempotency_cache.sql  0003_seat_holds_doc_comments.sql  0004_schema_version_marker.sql
