[workspace]
resolver = "2"
members = ["crates/engine-core", "crates/engine-server", "loadtest"]

[workspace.package]
version = "1.0.1"
edition = "2021"
license = "MIT"
authors = ["TransityTerminal"]

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "macros", "migrate"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "aio"] }
deadpool-redis = "0.18"
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2.6"
anyhow = "1"
dotenvy = "0.15"
futures = "0.3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
