[package]
name = "loadtest"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "loadtest"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive", "env"] }
hdrhistogram = "7"
futures = { workspace = true }
