[package]
name = "engine-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dev-dependencies]
async-trait.workspace = true

[dependencies]
tokio.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
redis.workspace = true
deadpool-redis.workspace = true
futures.workspace = true
