[package]
name = "engine-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "engine-server"
path = "src/main.rs"

[dependencies]
engine-core = { path = "../engine-core" }
tokio.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
subtle.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
deadpool-redis.workspace = true
futures.workspace = true
